k8s/raw-manifests/01-namespace.yml
# ===================================================================
# StreamForge Personal Vedio Streaming Platform Kubernetes Manifests
# ===================================================================

# --------- Namespace: streamforge ---------
apiVersion: v1
kind: Namespace
metadata:
  name: streamforge
  labels:
    app.kubernetes.io/part-of: streamforge-application
    app.kubernetes.io/name: streamforge
