k8s/raw-manifests/05-postgres.yml
# --------- Deployment : Postgres ---------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: streamforge
  labels:
    app: streamforge
    app.kubernetes.io/name: streamforge
    app.kubernetes.io/component: postgres
    app.kubernetes.io/tier: database
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: streamforge
      app.kubernetes.io/name: streamforge
      app.kubernetes.io/component: postgres
      app.kubernetes.io/tier: database
  template:
    metadata:
      labels:
        app: streamforge
        app.kubernetes.io/name: streamforge
        app.kubernetes.io/component: postgres
        app.kubernetes.io/tier: database
    spec:
      automountServiceAccountToken: false
      containers:
        - name: postgres
          image: postgres:15-alpine
          resources:
            limits:
              memory: "512Mi"
              cpu: "1"
            requests:
              memory: "256Mi"
              cpu: "500m"
          ports:
            - containerPort: 5432
              protocol: TCP
          volumeMounts:
            - name: pg-data
              mountPath: /var/lib/postgresql/data
          livenessProbe:
            exec:
              command: ["pg_isready", "-U", "postgres", "-d", "streamforge"]
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
          startupProbe:
            exec:
              command: ["pg_isready", "-U", "postgres", "-d", "streamforge"]
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
      volumes:
        - name: pg-data
          persistentVolumeClaim:
            claimName: pvc-streamforge-postgres

---
# --------- Service : Postgres ---------
apiVersion: v1
kind: Service
metadata:
  name: streamforge-postgres-svc
  namespace: streamforge
  labels:
    app: streamforge
    app.kubernetes.io/name: streamforge
spec:
  selector:
    app: streamforge
    app.kubernetes.io/name: streamforge
    app.kubernetes.io/component: postgres
    app.kubernetes.io/tier: database
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
  type: ClusterIP

---
