k8s/raw-manifests/07-rabbitmq.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sf-rabbitmq
  namespace: streamforge
  labels:
    app.kubernetes.io/name: rabbitmq
    app.kubernetes.io/part-of: streamforge-application
    app.kubernetes.io/component: queue
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: rabbitmq
      app.kubernetes.io/part-of: streamforge-application
      app.kubernetes.io/component: queue
  template:
    metadata:
      labels:
        app.kubernetes.io/name: rabbitmq
        app.kubernetes.io/part-of: streamforge-application
        app.kubernetes.io/component: queue
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app.kubernetes.io/name
                      operator: In
                      values:
                        - rabbitmq
                topologyKey: "kubernetes.io/hostname"
      containers:
        - name: sf-rabbitmq
          image: rabbitmq:4.2.4-alpine
          resources:
            limits:
              memory: "1Gi"
              cpu: "1"
            requests:
              memory: "512Mi"
              cpu: "500m"
          ports:
            - containerPort: 5672
              protocol: TCP
              name: amqp
          livenessProbe:
            exec:
              command:
                - rabbitmq-diagnostics
                - ping
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
          readinessProbe:
            exec:
              command:
                - rabbitmq-diagnostics
                - ping
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5

---
# --------- Service : RabbitMQ ---------
apiVersion: v1
kind: Service
metadata:
  name: sf-rabbitmq-svc
  namespace: streamforge
  labels:
    app.kubernetes.io/name: rabbitmq
    app.kubernetes.io/part-of: streamforge-application
    app.kubernetes.io/component: queue
spec:
  selector:
    app.kubernetes.io/name: rabbitmq
    app.kubernetes.io/part-of: streamforge-application
    app.kubernetes.io/component: queue
  ports:
    - port: 5672
      targetPort: 5672
      name: amqp
  type: ClusterIP

---
