k8s/raw-manifests/09-transcoder.yml
---
# --------- Deployment : Transcoder ---------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transcoder
  namespace: streamforge
  labels:
    app: streamforge
    app.kubernetes.io/name: streamforge
    app.kubernetes.io/component: transcoder
    app.kubernetes.io/tier: backend
spec:
  selector:
    matchLabels:
      app: streamforge
      app.kubernetes.io/name: streamforge
      app.kubernetes.io/component: transcoder
      app.kubernetes.io/tier: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: streamforge
        app.kubernetes.io/name: streamforge
        app.kubernetes.io/component: transcoder
        app.kubernetes.io/tier: backend
    spec:
      containers:
        - name: streamforge-transcoder
          image: sudheer0357/streamforge-transcoder:latest
          resources:
            limits:
              memory: "2Gi"
              cpu: "2"
            requests:
              memory: "1Gi"
              cpu: "1"
          ports:
            - containerPort: 9090
              protocol: TCP
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - wget -qO- http://localhost:9090/metrics || exit 1
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - wget -qO- http://localhost:9090/metrics || exit 1
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5

---
# --------- Service : Transcoder ---------
apiVersion: v1
kind: Service
metadata:
  name: streamforge-transcoder-svc
  namespace: streamforge
spec:
  selector:
    app: streamforge
    app.kubernetes.io/name: streamforge
    app.kubernetes.io/component: transcoder
    app.kubernetes.io/tier: backend
  ports:
    - port: 9090
      targetPort: 9090

---
