k8s/raw-manifests/10-frontend.yml
# --------- Deployment : Frontend ---------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: streamforge
  labels:
    app: streamforge
    app.kubernetes.io/name: streamforge
    app.kubernetes.io/component: frontend
    app.kubernetes.io/tier: frontend
spec:
  selector:
    matchLabels:
      app: streamforge
      app.kubernetes.io/name: streamforge
      app.kubernetes.io/component: frontend
      app.kubernetes.io/tier: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: streamforge
        app.kubernetes.io/name: streamforge
        app.kubernetes.io/component: frontend
        app.kubernetes.io/tier: frontend
    spec:
      containers:
        - name: streamforge-frontend
          image: sudheer0357/streamforge-frontend:latest
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
            requests:
              memory: "64Mi"
              cpu: "250m"
          ports:
            - containerPort: 3000
---
# --------- Service : Frontend ---------
apiVersion: v1
kind: Service
metadata:
  name: streamforge-frontend-svc
  namespace: streamforge
spec:
  selector:
    app: streamforge
    app.kubernetes.io/name: streamforge
    app.kubernetes.io/component: frontend
    app.kubernetes.io/tier: frontend
  ports:
    - port: 80
      targetPort: 3000
  type: NodePort

---
